vlib/v/checker/tests/go_mut_receiver.out
vlib/v/checker/tests/go_mut_receiver.vv:14:8: error: method in `spawn` statement cannot have non-reference mutable receiver
   12 |         a: 0
   13 |     }
   14 |     spawn x.change()
      |           ^
   15 | }
