vlib/v/checker/tests/go_mut_receiver.vv
struct St {
mut:
	a int
}

fn (mut a St) change() {
	a.a++
}

fn main() {
	mut x := St{
		a: 0
	}
	spawn x.change()
}
